# js-vkr

./: .gitignore
client/: from_file.js  package-lock.json  package.json
client/src/: App.vue  background.js
client/src/components/: VideoRecorder.vue
js-vkr-client/: package-lock.json  package.json  something.h264
js-vkr-client/src/: App.vue  background.js
js-vkr-client/src/components/: VideoRecorder.vue
js-vkr-server/: package-lock.json  package.json  server.js
js-vkr-server/lib/win32/: WelsVP.lib
server/: CMakeLists.txt  index.js  package-lock.json  package.json  server.js
server/lib/win32/: WelsDecPlus.lib  WelsEncPlus.lib
server/src/: main.cpp
server/view/: index.html
